objects/tfn_Species_EVC_Observation__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Abundance_Scale__c</fullName>
        <label>Abundance Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;  1% projective foliage, few individuals</fullName>
                    <color>#FFFFFF</color>
                    <label>&lt;  1% projective foliage, few individuals</label>
                </value>
                <value>
                    <fullName>1-5% projective foliage cover or &lt;  1% many individuals</fullName>
                    <color>#FFFFFF</color>
                    <label>1-5% projective foliage cover or &lt;  1% many individuals</label>
                </value>
                <value>
                    <fullName>26-50% projective foliage cover</fullName>
                    <color>#FFFFFF</color>
                    <label>26-50% projective foliage cover</label>
                </value>
                <value>
                    <fullName>51-75% projective foliage cover</fullName>
                    <color>#FFFFFF</color>
                    <label>51-75% projective foliage cover</label>
                </value>
                <value>
                    <fullName>5-25% projective foliage cover or &lt;  5% numerous individuals</fullName>
                    <color>#FFFFFF</color>
                    <label>5-25% projective foliage cover or &lt;  5% numerous individuals</label>
                </value>
                <value>
                    <fullName>76-100% projective foliage cover</fullName>
                    <color>#FFFFFF</color>
                    <label>76-100% projective foliage cover</label>
                </value>
                <value>
                    <fullName>Not Entered</fullName>
                    <color>#FFFFFF</color>
                    <label>Not Entered</label>
                </value>
                <value>
                    <fullName>Rare or solitary with negligible cover</fullName>
                    <color>#FFFFFF</color>
                    <label>Rare or solitary with negligible cover</label>
                </value>
                <value>
                    <fullName>Assumed presence</fullName>
                    <label>Fauna - Assumed presence</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <label>Fauna - Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <label>Fauna - Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <label>fauna - High</label>
                </value>
                <value>
                    <fullName>1-5% projective foliage cover or &lt; 1% many individuals</fullName>
                    <isActive>false</isActive>
                    <label>1-5% projective foliage cover or &lt; 1% many individuals</label>
                </value>
                <value>
                    <fullName>5-25% projective foliage cover or &lt; 5% numerous individuals</fullName>
                    <isActive>false</isActive>
                    <label>5-25% projective foliage cover or &lt; 5% numerous individuals</label>
                </value>
                <value>
                    <fullName>&lt; 1% projective foliage, few individuals</fullName>
                    <isActive>false</isActive>
                    <label>&lt; 1% projective foliage, few individuals</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Asset_Marker__c</fullName>
        <label>Asset Marker</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Asset_Question__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Bioregion_No__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_Bioregion_No__c</formula>
        <label>Bioregion No.</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Bioregion__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_Bioregion__c</formula>
        <label>Bioregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Breeding_Recruitment__c</fullName>
        <label>Breeding/Recruitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tfn_Yes_or_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Common_Name__c</fullName>
        <formula>tfn_Species__r.tfn_Common_Name__c</formula>
        <label>Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Conservation_Status__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_BCS__c</formula>
        <inlineHelpText>BCS</inlineHelpText>
        <label>Conservation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Conservation_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conservation Tier</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Domestic_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Domestic Tier</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_EC_Observation_Name__c</fullName>
        <formula>( LEFT(tfn_Ecological_Community__r.Name, 40) )&amp;(&quot; - &quot;)&amp;TEXT(tfn_EVC_Trend_Cond_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Observation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EPCB_Act_Status__c</fullName>
        <formula>TRIM((tfn_Species__r.tfn_EPCB_Act_Status__c)&amp;( tfn_Ecological_Community__r.tfn_EC_EPBC_Act_Status__c ))</formula>
        <label>EPCB Act Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Group_No__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_EVC_Group_No__c</formula>
        <label>EVC Group No.</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Name_Official__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_EVC_Official_Name__c</formula>
        <label>EVC Name (Official)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_No__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_EVC_Number__c</formula>
        <label>EVC No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Observation_Name__c</fullName>
        <formula>(tfn_Ecological_Vegetation_Class__r.tfn_EVC_Official_Name__c)&amp;(&quot; - &quot;)&amp;TEXT(tfn_EVC_Trend_Cond_Date__c)</formula>
        <label>EVC Observation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Sub_Group_Name__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_EVC_Sub_Group_Name__c</formula>
        <label>EVC Sub-Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EVC_Trend_Cond_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Observation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_Ecological_Community_Name__c</fullName>
        <formula>tfn_Ecological_Community__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ecological Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Ecological_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ecological Community</label>
        <referenceTo>tfn_Ecological_Community__c</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Ecological_Vegetation_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is in the format of &quot;Ecological Vegetation Class Name - Vic Bio Region&quot;</inlineHelpText>
        <label>Ecological Vegetation Class</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This is a legacy value and cannot be linked to a new interest</errorMessage>
            <filterItems>
                <field>tfn_Ecological_Vegetation_Class__c.tfn_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Ecological_Vegetation_Class__c</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_FFG_Act_Status__c</fullName>
        <formula>TRIM((tfn_Species__r.tfn_FFG_Act_Status__c)&amp;( tfn_Ecological_Community__r.tfn_EC_FFG_Act_Status__c ))</formula>
        <label>FFG Act Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Fauna_Survey_Detailed_List__c</fullName>
        <label>Survey Detailed List</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>tfn_Survey_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 km block count</fullName>
                </value>
                <value>
                    <fullName>Bat detector</fullName>
                </value>
                <value>
                    <fullName>Bat trap</fullName>
                </value>
                <value>
                    <fullName>Bat tripline</fullName>
                </value>
                <value>
                    <fullName>Birds Australia 2ha search</fullName>
                </value>
                <value>
                    <fullName>Birds Australia 500m area search</fullName>
                </value>
                <value>
                    <fullName>Birds Australia 5km area search</fullName>
                </value>
                <value>
                    <fullName>Birds Australia incidental search</fullName>
                </value>
                <value>
                    <fullName>Bird transect</fullName>
                </value>
                <value>
                    <fullName>Both cage/elliot and bat/fishing line trip line</fullName>
                </value>
                <value>
                    <fullName>Cage trap</fullName>
                </value>
                <value>
                    <fullName>Camera - remote</fullName>
                </value>
                <value>
                    <fullName>Camera - Thermal imaging</fullName>
                </value>
                <value>
                    <fullName>Dip Net</fullName>
                </value>
                <value>
                    <fullName>Dusk watch</fullName>
                </value>
                <value>
                    <fullName>Elliott trap</fullName>
                </value>
                <value>
                    <fullName>Elliott trap - Large</fullName>
                </value>
                <value>
                    <fullName>Faunatech hair tubes(bait type in X)</fullName>
                </value>
                <value>
                    <fullName>Frog census</fullName>
                </value>
                <value>
                    <fullName>Frog transect</fullName>
                </value>
                <value>
                    <fullName>Funnel Trap Drift Fence</fullName>
                </value>
                <value>
                    <fullName>Giant Gippsland Earthworm Survey</fullName>
                </value>
                <value>
                    <fullName>Golden Sun Moth Adult Survey</fullName>
                </value>
                <value>
                    <fullName>Golden Sun Moth Lavae Survey</fullName>
                </value>
                <value>
                    <fullName>Golden Sun Moth Pupae Survey</fullName>
                </value>
                <value>
                    <fullName>Hair tube</fullName>
                </value>
                <value>
                    <fullName>Herp census - active</fullName>
                </value>
                <value>
                    <fullName>Herp census - passive</fullName>
                </value>
                <value>
                    <fullName>Herp spot count</fullName>
                </value>
                <value>
                    <fullName>Herp transect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Fauna__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for fauna</inlineHelpText>
        <label>Fauna</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Species__c.tfn_Primary_Discipline__c</field>
                <operation>notEqual</operation>
                <value>Flora</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species__c</referenceTo>
        <relationshipName>Species_EVC_Observations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Flora__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Search for the flora</inlineHelpText>
        <label>Flora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Species__c.tfn_Primary_Discipline__c</field>
                <operation>equals</operation>
                <value>Flora</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species__c</referenceTo>
        <relationshipName>Species_EVC_Observations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Historic_Place_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Historic Place Tier</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Interest__c</fullName>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tfn_Major_Asset_Category__c</fullName>
        <formula>tfn_Ecological_Vegetation_Class__r.tfn_EVC_Group_Name_MajorAsset__c</formula>
        <label>Major Asset Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Modified_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Modified Tier</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitoring (If Applicable)</label>
        <referenceTo>loc03__Monitoring__c</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Natural_Interest_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Natural Interest Tier</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Nvis_Growthform__c</fullName>
        <formula>tfn_Species__r.tfn_Nvis_Growthform__c</formula>
        <label>Nvis Growthform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Observation_Comments__c</fullName>
        <label>Observation Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Observation_Condition__c</fullName>
        <inlineHelpText>This is the field that is used in New Covenant Proposal that is submitted to committee for approval</inlineHelpText>
        <label>Observation Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Observation_Coordinates__c</fullName>
        <label>Observation Coordinates</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tfn_Observation_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Observation Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Observation_by__c</fullName>
        <label>Observation by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Covenantor</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Origin__c</fullName>
        <formula>tfn_Species__r.tfn_Origin__c</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Primary_Discipline__c</fullName>
        <formula>tfn_Species__r.tfn_Primary_Discipline__c</formula>
        <label>Primary Discipline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Recording_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Staff member who recorded this observation.</description>
        <inlineHelpText>Staff member who recorded this observation.</inlineHelpText>
        <label>Recording By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Recording_Status__c</fullName>
        <label>Recording Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Observed</fullName>
                    <color>#FFFFFF</color>
                    <label>Observed</label>
                </value>
                <value>
                    <fullName>Potential</fullName>
                    <color>#FFFFFF</color>
                    <label>Potential</label>
                </value>
                <value>
                    <fullName>All</fullName>
                    <isActive>false</isActive>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Locally Significant</fullName>
                    <isActive>false</isActive>
                    <label>Locally Significant</label>
                </value>
                <value>
                    <fullName>Regionally Significant</fullName>
                    <isActive>false</isActive>
                    <label>Regionally Significant</label>
                </value>
                <value>
                    <fullName>Significant</fullName>
                    <isActive>false</isActive>
                    <label>Significant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Short_Name__c</fullName>
        <formula>tfn_Species__r.tfn_Short_Name__c</formula>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species_EVC_Asset_Description__c</fullName>
        <defaultValue>&quot;Text&quot;</defaultValue>
        <label>Species/EVC/EC Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Image__c</fullName>
        <formula>HYPERLINK(tfn_Species__r.tfn_Image_Library_Link__c, &quot;Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Species Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Observation_Name__c</fullName>
        <formula>(tfn_Species__r.Name)&amp;(&quot; - &quot;)&amp;TEXT(tfn_EVC_Trend_Cond_Date__c)</formula>
        <label>Species Observation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Scientific_Name__c</fullName>
        <formula>tfn_Species__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Species Scientific Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Species</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>tfn_Species__c.tfn_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Species__c</referenceTo>
        <relationshipName>Species_EVC_Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incidental</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                    <default>true</default>
                    <label>Monitoring</label>
                </value>
                <value>
                    <fullName>Nest box</fullName>
                </value>
                <value>
                    <fullName>Quadrat</fullName>
                </value>
                <value>
                    <fullName>Species List for Defined Area</fullName>
                </value>
                <value>
                    <fullName>Specimen</fullName>
                </value>
                <value>
                    <fullName>Spotlighting</fullName>
                </value>
                <value>
                    <fullName>Targeted Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Sustainable_Tier__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sustainable Tier</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Total_EVC_Area__c</fullName>
        <formula>tfn_Conservation_Tier__c+tfn_Domestic_Tier__c+tfn_Historic_Place_Tier__c+tfn_Modified_Tier__c+tfn_Natural_Interest_Tier__c+tfn_Sustainable_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total EVC Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Vic_Bio_Region__c</fullName>
        <formula>tfn_Interest__r.tfn_Vic_Bio_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vic Bio Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Victorian_Advisory_Status__c</fullName>
        <formula>tfn_Species__r.tfn_Victorian_Advisory_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Victorian Advisory Status</label>
        <type>Text</type>
    </fields>
    <label>Species/EVC/EC Observation</label>
    <nameField>
        <label>Species/ EVC Observation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Species/EVC/EC Observations</pluralLabel>
    <recordTypes>
        <fullName>tfn_Ecological_Community</fullName>
        <active>true</active>
        <label>Ecological Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>tfn_Ecological_Vegetation_Class</fullName>
        <active>true</active>
        <label>EVC</label>
    </recordTypes>
    <recordTypes>
        <fullName>tfn_Species</fullName>
        <active>true</active>
        <label>Species</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>